scss/modules/_footer.scss
@use "sass:map";

$buttonColors: (
  ".fa-facebook": $facebook-color,
  ".fa-twitter": $twitter-color,
  ".fa-instagram": $instagram-color,
  ".fa-linkedin": $linkedin-color,
);

.footer{
    background-color: $primary-color;
    color: $white;
    
    font-size: .8125rem;
    line-height: 1.375rem;

    & a{
        color: $white;
        &:hover{
            text-decoration:underline;
        }
    }
}

.footer-menus{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 47px 0 0 0;
}

.service-list, .office-list{
    display:flex;
    flex-wrap:wrap;
    justify-content: center;
    width: 100%;
}
.menu{
    width:225px;
    padding-bottom:35px;
    & h4{
        color: #fff;
        text-transform: uppercase;
        font-size: 1rem;
        margin-bottom: 26px;
    }
}

.menu ul{
    padding-left:0;
    margin-bottom:0;
    & li{
        list-style: none;
    }    
}

.bottom-bar{
    display:flex;
    justify-content: space-between;
    border-top: 1px solid #888;
    padding: 15px 0 30px 0;
}

.social{
    margin-top:-5px;
}

.bottom-bar i{
    text-align: center;
    text-decoration: none;
    padding: 10px;
    border-radius: 50%;
    width: 2rem;
    height: 2rem;
}

@each $className, $color in $buttonColors{
    #{$className}:hover{
            background-color: $color;  
    }
}


@media(min-width:map.get($breakpoints,"md")){
    .service-list, .office-list{        
        justify-content: space-evenly;
    }
}

@media(min-width:map.get($breakpoints,"xl")){
    .service-list, .office-list{        
        justify-content: space-between;
        width: auto;
    }
}

